Mailing functionality has been implemented using Gmail.

--- a/backend/src/public/index.html
+++ b/backend/src/public/index.html
@@ -24,5 +24,11 @@
     <label for="">To get <strong>carts</strong>, visit: </label>
 
     <a href="http://localhost:8081/api/carts" style="text-decoration: none;"><button style="min-width: 100px; cursor: pointer;">Carts</button></a>
+
+    <br><br>
+
+    <label for="">To get <strong>orders</strong>, visit: </label>
+
+    <a href="http://localhost:8081/api/orders" style="text-decoration: none;"><button style="min-width: 100px; cursor: pointer;">Orders</button></a>
 </body>
 </html>
